2010-06-06  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* demo.tcl: Added demo program showing  code and plot/chart
	* plotpriv.tcl: Moving DrawVtext to plotaxis.tcl (also checking Tk version)
	* plotpriv.tcl: Enable "exploding" segments in a piechart
	* plotbind.tcl: Provide a procedure to explode a segment in a piechart
	* plotaxis.tcl: Adjusted formatting of axis labels - Tcl 8.5 uses a large precision,
	                leading to labels like 0.09999999 instead of 0.1
	* plotaxis.tcl: Draw labels in bar charts centred wrt the bars, not the bars and gap (suggestion by Harald Oehlmann)
	* plotaxis.tcl: Moving the legend interactively via Button-1
	* scaling.tcl: Added a new scaling procedure: determineScaleFromList
	* plotchart.tcl: Added this new scaling procedure to the exports
	* plotchart.man: Describe the new scaling procedure
	* plotchart.man: Describe the bindplot and bindlast subcommands
	* plotchart.test: Added tests for the new scaling procedure
	* pkgIndex.tcl: Changed version Plotchart to 1.8.3 and xyplot to 1.0.1
	* xyplot.tcl: Updates by Jos DeCoster (adjusted version to 1.0.1)

2010-05-10  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.man: Corrected documentation bug (2999846, thanks to Oliver Bienert)

2009-12-10  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Added configuration method for barcharts
	* plotchart.tcl: Added methods implemented by Michael Baudin for isolines
	* plotchart.man: Documented this new configuration method and isoline methods
	* plotpriv.tcl: Implementation of a number of configuration options for barcharts
	* plotaxis.tcl: Solved bug 2906751 (formatting labels of right axis did not work)
	* plotcontour.test: Added extra test by Michael Baudin for isoline plots
	* rosenbrock.tcl: Demo by Michael Baudin of plotting isolines for the Rosenbrock function
	* pkgIndex.tcl: Changed version to 1.8.2

2009-11-24  Arjen Markus  <arjenmarkus@users.sourceforge.net>